--- a/food1.html
+++ b/food1.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="style4.css">
 </head>
 <link rel="stylesheet" href="signup-short.css">
+<link rel="stylesheet" href="login.css">
 <header>
   <img src="ChatGPT Image Jun 18, 2025, 10_16_12 AM.png" alt="โลโก้ร้านอาหาร" style='width: 80px; height: 100px;'>
     <h1>ร้านอาหาร 4 ภาค</h1>
@@ -21,17 +22,14 @@
       <a href="food3.html">อาหารภาคใต้</a>
       <a href="food4.html">อาหารภาคอีสาน</a>
       <a href="food5.html">เครื่องดื่ม</a>
+  <a href="signup.html">
+    <button class="signup-btn">สมัครสมาชิกเลย✅</button>
+  </a>
+  <a href="login.html">
+    <button class="login-btn">เข้าสู่ระบบเลย✅</button>
+  </a>
     </nav>
   </header>
-
-<!-- แบบฟอร์มสมัครสมาชิกย่อ -->
-<section class="signup-short">
-  <p>ต้องการรับโปรโมชั่นก่อนใคร? สมัครสมาชิกเลย✅</p>
-  <a href="signup.html">
-    <button class="signup-btn">สมัครเลย</button>
-  </a>
-</section>
-
 
 <div class="autoslide-container">
   <div class="autoslide-track">
